[package]
name = "zyfer_cs2_rs"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"


[dependencies]
egui = {version = "0.29.0", features = ["serde"]}
eframe = { version = "0.29.0", features = ["glow", "serde"] }
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0.210" , features = ["derive"] } 
serde_json = { version = "1.0.128"} 
cc = "1.1.21"
windows = { version = "0.58.0", features = ["Win32_Foundation", "System", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_System_Diagnostics_Debug", "Win32_System_Threading", "Win32_System_ProcessStatus", "Win32_UI_Input_KeyboardAndMouse"] }
sysinfo = "0.31.4"

[build-dependencies]
cc = "1.1.21"

[profile.release]
#lto = true
#opt-level = "z"
#codegen-units = 1
#strip = "debuginfo"
#panic = "abort"